@@ -8,6 +8,7 @@ Please send bfast bug reports to nhomer@cs.ucla.edu
 Version 0.1.7
 * Update bpostprocess for paired end support: now tested.
 * Removed extra "." in inversions file (bpostprocess).
+* Updated btestindexes against small bugs and added optimizations.
 
 Version 0.1.6
 * bgeneratereads was not producing SNPs and errors properly.
